# volumetricinterp

./: .gitignore  Estimate.py  EvalParam.py  Evaluate.py  Fit.py  Interpolate.py  Model.py  Model_RBF.py  Param.py  Param_old.py  README.md  README.rst  RawData_Folders_Exps_Times_by_Radar.h5  Validate.py  amisr_fit.py  example_config.ini  faux-data-maker.py  processed_file_list.py  pyproject.toml  regrid_risr_interp_for_gemini.py  requirements.txt  run_validate.py  run_volumetric_interp.py  run_volumetricinterp.py  setup.cfg  setup.py  test_fit.py  volumetricinterp_tutorial.ipynb
algorithm_docs/: amisr_fit_documentation.tex  bibliography.bib
iri_test/: iri_grid.py  iri_profile.py
src/volumetricinterp/: __init__.py  interp4model.py  interpolate.py  model_reconstruct.py  run_volumetricinterp.py  validate.py
volumetricinterp/: __init__.py  coefficient_values.csv  config.ini  estimate.py  estimate_densities.py  example_config.ini  interp4model.py  interpolate.py  loop_config.ini  model_reconstruct.py  run_spectrum.py  run_validate.py  run_volumetricinterp.py  spectrum.py  validate.py
volumetricinterp/models/: radbasfun.py  sphharmlag.py
