[metadata]
name = volumetricinterp
version = attr: volumetricinterp.__version__
description = Tool for interpolating 3D scalar parameters from from AMISR data.
long_description = file: README.rst, LICENSE.rst
keywords = AMISR, interpolation, data
license = GNU GPLv3
author = L. Lamarche
author_email = leslie.lamarche@sri.com
url = https://github.com/amisr/volumetricinterp
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Programming Language :: Python


[options]
packages = find:
install_requires =
    numpy >= 1.16
    ; pytables >= 3.3.0
    h5py >=2.9.0
    scipy >= 1.2
    pymap3d >= 1.8.0

[options.entry_points]
console_scripts =
    volumetricinterp = volumetricinterp.interp4model:main

; [options.package_data]
; amisrsynthdata =
;   beamcodes/*.txt
